k8s/bases/infrastructure/controllers/auth-proxy/reference-grant.yaml
# TODO: Remove auth-proxy when Cilium supports native forward auth (https://github.com/cilium/cilium/issues/23797)
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-oauth2-proxy-backends
  namespace: oauth2-proxy
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: homepage
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: flux-system
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: goldilocks
  to:
    - group: ""
      kind: Service
      name: oauth2-proxy
