k8s/bases/infrastructure/controllers/auth-proxy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-proxy
  namespace: oauth2-proxy
spec:
  selector:
    app: auth-proxy
  ports:
    - port: 80
      targetPort: 8080
